﻿Revision history for {{$dist->name}}

{{$NEXT}}

2.017002 2014-08-15T20:54:32Z
 [00 Trivial]
 - util updates.
 - whitespace adjustment

 [Misc]
 - Improve source side POD to reduce build side whitespace.

 [Utils]
 - dep_changes: Greatly increase the cache timing to 5h instead of 30m now it proves to be more stable.

2.017001 2014-08-15T01:59:33Z
 [00 Bugfix]
 - Use a version of Git::Contributors that is safe for testing and general use.

 [Dependencies::Stats]
 - Dependencies changed since 2.017000, see misc/*.deps* for details
 - develop: ↑3
 - runtime: ↑6
 - test: ↑1

2.017000 2014-08-11T20:48:43Z
 [00 Minor]
 - Start using Git::Contributors.
 - dep_changes: more cache levels
 - dep_changes: cache loaded CPAN::Meta objects for unique file SHAs
 - dep_changes: use Sereal for the CHI cache serializer.
 - dep_changes: group per-location caches by directory with cwd + base64 filter

 [Dependencies::Stats]
 - Dependencies changed since 2.016008, see misc/*.deps* for details
 - develop: +1
 - runtime: +1 (recommends: +1)

2.016008 2014-08-11T10:42:36Z
 [00 Minor]
 - dep_utils: fail better when build/master doesn't exist
 - dep_utils: try use META.yml if META.json doesn't exist
 - tests: update reportprereqs test

 [Dependencies::Stats]
 - Dependencies changed since 2.016007, see misc/*.deps* for details
 - develop: ↑4
 - runtime: ↑6
 - test: ↑1 -2

2.016007 2014-08-01T12:30:36Z
 [00 Minor]
 - dep_utils: continued refactoring, now based on simple CPAN::Changes::Dependencies::Details

 [Dependencies::Stats]
 - Dependencies changed since 2.016006, see misc/*.deps* for details
 - develop: ↑2
 - runtime: ↑2 (recommends: +1 -1)
 - test: ↑1 -1

2.016006 2014-07-30T04:27:01Z
 [Bug Fixes]
 - dep_utils: Less aggressive caching because [ commitish , path ] being cached can lead to wrong results.
 - tests: don't fail on newer dzil

 [Dependencies::Stats]
 - Dependencies changed since 2.016005, see misc/*.deps* for details
 - configure: ↓1
 - develop: ↑19
 - runtime: ↑22